--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@ricky0123/vad-web": "^0.0.18",
     "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
+    "elevenlabs": "^0.11.0",
     "groq-sdk": "^0.3.3",
     "next": "14.2.5",
     "onnxruntime-web": "^1.18.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "postcss": "^8",
